# wine

./: .gitignore  CLAUDE.md  README.md  pdf-theme-ja.yml
winedb/: DESIGN.md  README.md  alembic.ini  pyproject.toml
winedb/alembic/: env.py
winedb/alembic/versions/: 817101459347_initial_schema.py  9f2a8c1d4b00_grape_variety_key.py  b3e4f5a6b7c8_vineyard_grape_variety.py
winedb/app/: config.py  database.py  main.py
winedb/app/cli/: import_cmd.py  main.py
winedb/app/crud/: ava.py  grape_variety.py  person.py  vineyard.py  vineyard_owner.py  wine.py  wine_grape_variety.py  wine_vineyard_source.py  winery.py  winery_staff.py
winedb/app/models/: __init__.py  associations.py  ava.py  grape_variety.py  person.py  vineyard.py  wine.py  winery.py
winedb/app/routers/: ava.py  grape_varieties.py  persons.py  vineyards.py  wineries.py  wines.py
winedb/app/routers/gui/: ava.py  grape_varieties.py  persons.py  vineyard_owners.py  vineyards.py  wine_grape_varieties.py  wine_vineyard_sources.py  wineries.py  winery_staff.py  wines.py
winedb/app/schemas/: ava.py  grape_variety.py  person.py  vineyard.py  wine.py  winery.py
winedb/app/static/: app.css
winedb/app/templates/: base.html
winedb/app/templates/ava/: _rows.html  _table.html  graph.html  list.html
winedb/app/templates/grape_varieties/: _rows.html  _table.html  list.html
winedb/app/templates/partials/: form_ava.html  form_person.html  (+11 more)
winedb/plan/: data-validation-01.md  winedb-gui-sort.md  winedb-gui.md  winedb-plan.md
winedb/scripts/: extract_wine_vineyard_sources.py  generate_flagship_wines.py
(+40 files in other folders)
